# time-series

./: .gitattributes  .gitignore  LICENSE  pyproject.toml  requirements.txt
configs/: ETTh1.json  Epilepsy.json  FingerMovements.json  HAR.json  PenDigits.json  Synthetic.json  WISDM.json
notebooks/: classification.ipynb  embeddings.ipynb  masking.ipynb
scripts/: analyze_masking.py  calc_shap.py  collect_results.py  download_datasets.py  finetune.py  pretrain.py  shap_values.py  utils.py
src/: base.py  datasets.py  finetuning.py  instance_norm.py  linear_models.py  masking.py  pretraining.py  time_drl.py  time_shap.py  transformer.py  utils.py
src/tsl/: informer.py  model.py  ns_transformer.py  patch_tst.py
src/tsl/layers/: attention.py  embed.py  transformer.py
src/utils/: __init__.py  data_processing.py  machine_learning.py  visualization.py
