[project]
name = "timeseries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops==0.8.1",
    "lightning==2.5.0",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "plotly==5.24.1",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "shap==0.48.0",
    "tensorboard==2.19.0",
    "torch==2.5.1",
    "wandb==0.19.8",
]
